publish: Update index.md
generated from commit 72706d3429f03d9ea2f55e5ccfe793b9cb9ae113

--- a/index.html
+++ b/index.html
@@ -215,23 +215,28 @@
      <!--    <img src="images/logo-85f25049.svg" class="logo" alt="Logo" />
          -->
         <div class="nav_box">
-          <span class="nav_cell" style="display: none">
+      <!--     <span class="nav_cell" style="display: none">
             <a href="javascript:;" class="nav_first">v1<i class="icon_nav"></i></a>
             <ul class="nav_ul">
               <li>
-                <a href="/docs/spot/v1/en/" id="v1_url">v1</a>
+                <a href="/slate/docs/spot/v1/en/" id="v1_url">v1</a>
               </li>
               <li>
                 <a href="/docs/spot/v2/en/" id="v2_url">v2</a>
               </li>
             </ul>
-          </span>
-          <span class="nav_cell nav_tab">
+          </span> -->
+          
+          <!-- <span class="nav_cell nav_tab">
             <a href="/docs/spot/v1/en/" id="btn_spot">现货</a>
           </span>
+
           <span class="nav_cell nav_tab">
             <a href="/docs/dm/v1/en/" id="btn_dm">合约</a>
-          </span>
+          </span> -->
+
+
+
  <!--          <span class="nav_cell nav_tab">
             <a href="/docs/coin_margined_swap/v1/en/" id="btn_coin_margined_swap">币本位永续合约</a>
           </span> -->
@@ -241,7 +246,7 @@
         </div>
       </div>
 
-        <a href="/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
+        <a href="/slate/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
 
 
 
