--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </div>
       </div>
 
-        <a href="/slate/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
+        <a href="/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
 
 
 
